add optional streams examples